--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,9 @@ jobs:
           - nixpkgs=channel:nixos-unstable
           - nixpkgs=channel:nixpkgs-unstable
           - nixpkgs=channel:nixos-22.11
+        package:
+          - wine-wayland-lol
+          - wine-wayland-lol
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
@@ -27,18 +30,30 @@ jobs:
         nix_path: "${{ matrix.nixPath }}"
         extra_nix_config: |
           experimental-features = nix-command flakes
+          auto-optimise-store = true
           access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
     - name: Show nixpkgs version
       run: nix-instantiate --eval -E '(import <nixpkgs> {}).lib.version'
+
+
+    - name: Check packages
+      run: nix flake check
+
+
+    - name: Check formating
+      run: nix run nixpkgs#alejandra -- -c .
+
+
     - name: Setup cachix
       uses: cachix/cachix-action@v12
-      # Don't replace <YOUR_CACHIX_NAME> here!
-      if: ${{ matrix.cachixName != '<YOUR_CACHIX_NAME>' }}
       with:
         name: ${{ matrix.cachixName }}
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - name: Check evaluation
-      run: nix flake check
+
     - name: Build nix packages
-      run: nix run nixpkgs#nix-build-uncached -- ci.nix -A cacheOutputs
+      uses: cachix/cachix-action@v12
+      with:
+          name: ${{ matrix.cachixName }}
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+      run: nix build -L .#${{ matrix.package }}
